# CallToEDS

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
scripts/: init_bucket.py
src/call2eds/cli/: main.py
src/call2eds/config/: settings.py
src/call2eds/db/: models.py  session.py
src/call2eds/pipeline/: __init__.py  asr.py  audio.py  diarization.py  pipeline.py  pitch.py  prosody.py
src/call2eds/storage/: minio_client.py
src/call2eds/utils/: logger.py  manifest.py
src/call2eds/web/: server.py
src/call2eds/web/static/i18n/: app.json
src/call2eds/web/templates/: access.html  diagnostic.html  home.html  login.html  run_detail.html  setup.html  swagger.html
tests/: test_manifest.py
